# QuikDataCal

./: .gitignore  CMakeLists.txt  QuikAS.cpp  QuikAS.h  README.md  dataInputXLSX.cpp  dataInputXLSX.h  stock.cpp  stock.h
