cmake_minimum_required (VERSION 3.8)
project ("QuikAS")
set(CMAKE_CXX_STANDARD 17)

add_subdirectory(OpenXLSX)
include_directories(OpenXLSX/headers)
add_executable (QuikAS "QuikAS.cpp" "QuikAS.h" "stock.h" "stock.cpp" "menu.h" "menu.cpp"    "dataInputXLSX.h" "dataInputXLSX.cpp")
find_package(XLnt REQUIRED) 
target_link_libraries(QuikAS OpenXLSX::OpenXLSX xlnt::xlnt)
set_target_properties(QuikAS PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/output)